--- a/views/azure.sass
+++ b/views/azure.sass
@@ -33,7 +33,7 @@ h1.banner
   text-align: right
   background: url(headerline.jpg) no-repeat center top
 
-ul.navigation
+ul.main-navigation
   padding: 3px $side-margin
   background-color: black
   li
