--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,8 +7,8 @@
     %title azurefire
   %body
     %h1.banner azure<span>f</span>ire
-    .user-display#login
-      %p Welcome.
+    .user-display
+      = welcome
     = navigation
     .content
       = yield
