Allow navigation items/routes you need to log in to see.

--- a/views/azure.sass
+++ b/views/azure.sass
@@ -70,6 +70,11 @@ ul.sub-navigation
   border: solid 2px red
   background: $error-color
 
+.empty
+  color: $error-color
+  font-size: 150%
+  font-style: italic
+
 .content
   margin: 1em $side-margin
 
