--- a/views/news_write.haml
+++ b/views/news_write.haml
@@ -1,7 +1,9 @@
 %form{ :method => 'post' }
   %p
-    %input.title{ :type => 'text', :name => 'title' }
+    %input.title{ :type => 'text', :name => 'title', :value => @post.title }
   %p
     %textarea{ :width => 80, :height => 100, :name => 'body' }
+      = @post.body
   %p
-    %input{ :type => 'submit', :value => 'Submit post' }
+    %input{ :type => 'submit', :name => 'submit', :value => 'Submit' }
+    %input{ :type => 'submit', :name => 'preview', :value => 'Preview' }
