A little light styling of the post form.

--- a/views/azure.sass
+++ b/views/azure.sass
@@ -78,7 +78,17 @@ ul.sub-navigation
 .content
   margin: 1em $side-margin
 
-form
+form.post
   padding: 1em
   border: solid 1px #999
   background: #eee
+  
+  input.title
+    margin-bottom: 5px
+    width: 100%
+    font-size: 23pt
+    font-family: serif
+  textarea
+    width: 100%
+    height: 30em
+    font-family: sans-serif
