--- a/views/news_write.haml
+++ b/views/news_write.haml
@@ -1,4 +1,4 @@
-%form{ :method => 'post' }
+%form.post{ :method => 'post' }
   %p
     %input.title{ :type => 'text', :name => 'title', :value => @post.title }
   %p
