Partials should start with partial_

--- a/views/news_latest.haml
+++ b/views/news_latest.haml
@@ -1,2 +1,2 @@
 - @posts.each do |p|
-  = haml :post, :locals => { :post => p }, :layout => false
+  = haml :partial_post, :locals => { :post => p }, :layout => false
