--- a/views/news_post.haml
+++ b/views/news_post.haml
@@ -1,1 +1,1 @@
-= haml :post, :locals => { :post => @post }, :layout => false
+= haml :partial_post, :locals => { :post => @post }, :layout => false
