--- a/views/news_write.haml
+++ b/views/news_write.haml
@@ -7,6 +7,6 @@
   %p
     %input{ :type => 'submit', :name => 'submit', :value => 'Submit' }
     %input{ :type => 'submit', :name => 'preview', :value => 'Preview' }
-#preview.post
+#preview.post.markdown
   %h2.title= @post.title
   = markdown @post.body
