--- a/views/partial_comment.haml
+++ b/views/partial_comment.haml
@@ -1,4 +1,4 @@
-.comment.markdown{ :id => comment.key }
+.comment.markdown{ :id => comment.key, :class => comment.administrator ? 'administrator' : nil }
   - if comment.name != ''
     %p.name
       = comment.name
