--- a/views/news_write.haml
+++ b/views/news_write.haml
@@ -1,4 +1,6 @@
-%form.post{ :method => 'post' }
+%form.post{ :method => 'post', :action => '/news/write' }
+  %input{ :type => 'hidden', :name => 'persisted', :value => @post.persisted }
+  %input{ :type => 'hidden', :name => 'timestamp', :value => @post.timestamp.to_i }
   %p
     %input.title{ :type => 'text', :name => 'title', :value => @post.title }
   %p
