/news/write/2010... -> /news/edit/2010...

--- a/views/news_latest.haml
+++ b/views/news_latest.haml
@@ -4,4 +4,4 @@
     %li
       %a{ :href => "/news/#{p.url_slug}" } comments (0)
     %li
-      %a{ :href => "/news/write/#{p.url_slug}" } edit
+      %a{ :href => "/news/edit/#{p.url_slug}" } edit
