--- a/views/news_latest.haml
+++ b/views/news_latest.haml
@@ -3,5 +3,6 @@
   %ul.controls
     %li
       %a{ :href => "/news/#{p.url_slug}" } comments (0)
-    %li
-      %a{ :href => "/news/edit/#{p.url_slug}" } edit
+    - if logged_in?
+      %li
+        %a{ :href => "/news/edit/#{p.url_slug}" } edit
