--- a/views/news_latest.haml
+++ b/views/news_latest.haml
@@ -2,7 +2,7 @@
   = haml :partial_post, :locals => { :post => p }, :layout => false
   %ul.controls
     %li
-      %a{ :href => "/news/#{p.url_slug}" } comments (0)
+      %a{ :href => "/news/#{p.url_slug}" }= "comments (#{p.comment_count})"
     - if logged_in?
       %li
         %a{ :href => "/news/edit/#{p.url_slug}" } edit
