--- a/views/azure.sass
+++ b/views/azure.sass
@@ -1,12 +1,13 @@
 $side-margin: 15%
 $azure-color: #06f
+$fire-color: #f50
 $ok-color: #afa
 $error-color: #faa
 
 *
   margin: 0
   padding: 0
-  font-family: Arial, sans-serif
+  font-family: Corbel, Verdana, Helvetica, sans-serif
 
 a
   color: $azure-color
@@ -21,12 +22,13 @@ h1.banner
   text-indent: $side-margin
   font-size: 35pt
   font-weight: normal
+  font-family: Arial, sans-serif
   letter-spacing: 30px
   background: url(header.jpg) no-repeat center top
   span
     font-size: 50pt
     color: $azure-color
-    font-family: "Times New Roman", serif
+    font-family: "Times New Roman", Times, serif
     font-style: italic
 
 .user-display
@@ -72,22 +74,70 @@ ul.sub-navigation
 
 .empty
   color: $error-color
-  font-size: 150%
+  font-size: 72pt
   font-style: italic
+  letter-spacing: 5px
 
 .content
   margin: 1em $side-margin
+
+.post
+  .title
+    color: $fire-color
+    width: 100%
+    font-size: 25pt
+    font-family: Georgia, serif
+  .metadata
+    margin: 0 0 15px 0
+    font-size: 80%
+    font-style: italic
+    span
+      margin: 0 10px
+    span.name
+      margin-left: 0
+
+ul.controls
+  list-style-type: none
+  margin: 15px 0 3px 0
+  li
+    margin: 0 10px
+    display: inline
+  li:first-child
+    margin-left: 0
+
+h2.comment-count
+  margin: 15px 0 5px 0
+  font-size: 80%
+  font-weight: normal
+  font-style: italic
+
+ul.comments
+  list-style-type: none
+  li
+    margin: 1em 0
+    border: solid 1px #999
+    div, form
+      padding: 0.5em
+    .administrator
+      background: #eee
+    p.name
+      color: $fire-color
+      font-size: 80%
+      font-style: italic
+  li.new
+    p
+      margin: 0.5em 0
+    label
+      font-size: 80%
+      color: #999
+    textarea
+      width: 100%
+      height: 6em
 
 form.post
   padding: 1em
   border: solid 1px #999
   background: #eee
-  
-  input.title
-    margin-bottom: 5px
-    width: 100%
-    font-size: 23pt
-    font-family: serif
   textarea
     width: 100%
     height: 30em
