Display the current archive query.

--- a/views/news_archive.haml
+++ b/views/news_archive.haml
@@ -1,7 +1,9 @@
+.query
+  %p.current= "You are currently viewing #{@query}."
 %ul.results
   - @results.each_with_index do |post, index|
     %li{ :class => ('odd' if index.odd?) }
       %span.timestamp= post.timestamp.strftime '%d %b %Y %I:%M%P'
-      %a{ :href => "/news/#{post.url_slug}" }= post.title
       %span.separator \\
       %span.name= post.username
+      %a{ :href => "/news/#{post.url_slug}" }= post.title
