--- a/views/azure.sass
+++ b/views/azure.sass
@@ -149,9 +149,10 @@ ul.results
     span
       color: #999
     span.timestamp
-      margin-right: 5px
+      margin-right: 2px
     span.separator
-      margin-left: 5px
-      font-weight: bold
+      margin: 0 2px
+    span.name
+      margin: 0 10px 0 2px
   li.odd
     background: $azure-bg-color
