Minor bug fixes in posting.  Some CSS styling.

--- a/views/azure.sass
+++ b/views/azure.sass
@@ -4,6 +4,8 @@ $azure-bg-color: #cef
 $fire-color: #f50
 $ok-color: #afa
 $error-color: #faa
+$dark-bg-color: #eee
+$dark-border-color: #999
 
 *
   margin: 0
@@ -97,6 +99,10 @@ ul.sub-navigation
     span.name
       margin-left: 0
 
+.markdown
+  p
+    margin: 1em 0
+
 ul.controls
   list-style-type: none
   margin: 15px 0 3px 0
@@ -140,6 +146,12 @@ form.post
 
 #preview
   padding: 1em
+
+.query
+  margin: 1em 0
+  padding: 1em
+  background: #eee
+  border: solid 1px #999
 
 ul.results
   list-style-type: none
