--- a/views/news_write.haml
+++ b/views/news_write.haml
@@ -4,8 +4,7 @@
   %p
     %input.title{ :type => 'text', :name => 'title', :value => @post.title }
   %p
-    %textarea{ :width => 80, :height => 100, :name => 'body' }
-      = @post.body
+    %textarea{ :width => 80, :height => 100, :name => 'body' }= @post.body
   %p
     %input{ :type => 'submit', :name => 'submit', :value => 'Submit' }
     %input{ :type => 'submit', :name => 'preview', :value => 'Preview' }
