Using Rack::Flash to confirm success or report errors.

--- a/views/azure.sass
+++ b/views/azure.sass
@@ -68,8 +68,15 @@ ul.sub-navigation
     border: none
 
 .flash
-  margin-bottom: 1em
+  margin: 0.5em ($side-margin - 2%) 2em ($side-margin - 2%)
   padding: 1em
+  text-align: center
+  color: red
+
+.success
+  border: solid 2px green
+  background: $ok-color
+  color: green
 
 .error
   border: solid 2px red
