--- a/views/partial_post.haml
+++ b/views/partial_post.haml
@@ -1,6 +1,6 @@
 .post.markdown
-  %h2.title= post.title
-  .metadata
-    %span.name= post.username
-    %span.timestamp= post.timestamp.strftime '%A, %d %B %Y %I:%M%P'
-  != post.body
+  .header
+    %span.author= meta.author
+    %span.timestamp= meta.timestamp.strftime '%a %e %b %Y %l:%M%P'
+    %h2.title= meta.title
+  != body
