First passing web test case.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,8 +7,7 @@
     %title azurefire
   %body
     %h1.banner azure<span>f</span>ire
-    .user-display
-      = welcome
+    .user-display TODO Quote of the day goes here.
     = navigation
     - [:success, :error].each do |type|
       - if flash.has? type
