--- a/views/azure.sass
+++ b/views/azure.sass
@@ -128,7 +128,7 @@ ul.comments
       padding: 0.5em
     .administrator
       background: #eee
-    p.name
+    p.name, input.name
       color: $fire-color
       font-size: 80%
       font-style: italic
