--- a/views/single_post.haml
+++ b/views/single_post.haml
@@ -4,9 +4,8 @@
   %li.comment-count
     = "comments (#{@post.comment_count})"
 %ul.comments
-  - @post.comments.each do |c|
-    %li
-      = haml :partial_comment, :locals => { :comment => c }, :layout => false
+  - @post.each_rendered_comment do |c|
+    %li!= c
   %li.new
     %form{ :method => 'post' }
       %p
