--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,6 +4,9 @@
     %meta{'http-equiv' => 'Content-Type', :content => "text/html; charset=iso-8859-1"}
     %link{ :href => '/favicon.ico', :rel => 'shortcut icon' }
     %link{ :href => '/azure.css', :type => 'text/css', :rel => 'stylesheet' }
+    %script{ :type => 'text/javascript', :src => 'js/jquery-1.6.4.min.js' }
+    - (@js || []).each do |scriptname|
+      %script{ :type => 'text/javascript', :src => "js/#{scriptname}.js" }
     %title azurefire
   %body
     %h1.banner azure<span>f</span>ire
