--- a/views/azure.sass
+++ b/views/azure.sass
@@ -103,7 +103,7 @@ ul.sub-navigation
     font-style: italic
     span
       margin: 0 10px
-    span.name
+    span.author
       margin-left: 0
 
 .markdown
@@ -151,7 +151,7 @@ form.post
     width: 100%
     height: 30em
 
-#preview
+#comment-preview
   padding: 1em
 
 .query
@@ -171,7 +171,7 @@ ul.results
       margin-right: 2px
     span.separator
       margin: 0 2px
-    span.name
+    span.author
       margin: 0 10px 0 2px
   li.odd
     background: $azure-bg-color
