Display the current archive query on the archive page.

--- a/views/archive.haml
+++ b/views/archive.haml
@@ -1,5 +1,5 @@
 .query
-  -# %p.current= "You are currently viewing #{@query}."
+  %p.current= "You are currently viewing #{@query}."
 %ul.results
   - @posts.each_with_index do |post, index|
     %li{ :class => ('odd' if index.odd?) }
