Fairly overengineered Daily Quote mechanism.

--- a/views/azure.sass
+++ b/views/azure.sass
@@ -34,7 +34,7 @@ h1.banner
     font-family: "Times New Roman", Times, serif
     font-style: italic
 
-.user-display
+.qotd
   padding: 5px $side-margin
   font-size: 10pt
   text-align: right
