--- a/views/azure.sass
+++ b/views/azure.sass
@@ -40,7 +40,7 @@ h1.banner
   text-align: right
   background: url(headerline.jpg) no-repeat center top
 
-ul.main-navigation
+ul.navigation
   padding: 3px $side-margin
   background-color: black
   li
