--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,7 +4,7 @@
     %meta{'http-equiv' => 'Content-Type', :content => "text/html; charset=iso-8859-1"}
     %link{ :href => '/favicon.ico', :rel => 'shortcut icon' }
     %link{ :href => '/azure.css', :type => 'text/css', :rel => 'stylesheet' }
-    %link{ :href => @rss_path || Settings.current.rss_href, :type => 'application/rss+xml', :rel => 'alternate', :title => 'All site news updates.' }
+    %link{ :href => Settings.current.rss_href, :type => 'application/rss+xml', :rel => 'alternate', :title => 'All site news updates.' }
     %script{ :type => 'text/javascript', :src => 'js/jquery-1.6.4.min.js' }
     - (@js || []).each do |scriptname|
       %script{ :type => 'text/javascript', :src => "js/#{scriptname}.js" }
