Touch up markup in a few places.

--- a/views/single_post.haml
+++ b/views/single_post.haml
@@ -19,5 +19,5 @@
       %p
         %textarea{ :id => 'comment-body', :name => 'body' }
       %p
-        %input{ :type => 'submit', :value => 'Submit' }
+        %input{ :type => 'submit', :class => 'submit', :value => 'Submit' }
     %div{ :id => 'comment-preview' }
