--- a/views/news.haml
+++ b/views/news.haml
@@ -1,7 +1,7 @@
 %a{ :class => 'rss', :href => '/feed.rss' } subscribe
 - @posts.each do |p|
   .post
-    != p.content
+    !~ p.content
     %ul.controls
       %li
         %a{ :href => "/#{p.slug}" }= "comments (#{p.comment_count})"
