--- a/views/partial_post.haml
+++ b/views/partial_post.haml
@@ -3,7 +3,7 @@
   %span.timestamp= meta.timestamp.strftime '%a %e %b %Y %l:%M%P'
   %h2.title= meta.title
 .markdown
-  != body
+  !~ body
 %ul.tags
   - meta.tags.each do |t|
     %li
