Subscribe on any page.

--- a/views/single_post.haml
+++ b/views/single_post.haml
@@ -1,3 +1,4 @@
+%a{ :class => 'rss', :href => '/feed.rss' } subscribe
 .local-nav
   - if @prev
     %a.prev{ :href => "/#{@prev.slug}" }= @prev.title
