Wording tweak on our about page.

--- a/views/about.haml
+++ b/views/about.haml
@@ -1,7 +1,7 @@
 .about
   %h2 smash
   %p
-    Ash is a software developer by trade, and occasionally a runner, cook, writer, and gamer; but mostly, he reads science fiction and wastes time on Internet forums. He gets excited about new programming languages, web application design, artificial intelligence, and software development tools and processes.
+    Ash is a software developer by trade, and occasionally a runner, cook, writer, and gamer; but mostly, he reads science fiction and reads Internet forums. He gets excited about new programming languages, web application design, artificial intelligence, and software development tools and processes.
   %ul.contact
     %li
       %a{ :href => 'http://twitter.com/smashwilson/' } twitter
