--- a/views/news.haml
+++ b/views/news.haml
@@ -4,5 +4,4 @@
     !~ p.content
     %ul.controls
       %li
-        %a{ :href => "/#{p.slug}" }= "permalink"
--# %a{ :href => "/#{p.slug}" }= "comments (#{p.comment_count})"
+        %a{ :href => "/#{p.slug}" }= "comments (#{p.comment_count})"
