--- a/views/single_post.haml
+++ b/views/single_post.haml
@@ -14,6 +14,8 @@
     %li!~ c
   %li.new
     %form{ :method => 'post' }
+      %input{ :type => 'hidden', :name => 'spinner', :value => @spinner }
+      %input{ :type => 'hidden', :name => field_name(@spinner, 'timestamp'), :value => hash(@ts) }
       %p
         %label{ :for => 'name' } name (optional)
         %input{ :type => 'text', :id => 'name', :class => 'name', :name => 'name' }
