--- a/views/single_post.haml
+++ b/views/single_post.haml
@@ -16,6 +16,7 @@
     %form{ :method => 'post' }
       %input{ :type => 'hidden', :name => 'spinner', :value => @spinner }
       %input{ :type => 'hidden', :name => field_name(@spinner, 'timestamp'), :value => hash(@ts) }
+      %input{ :type => 'hidden', :name => field_name(@spinner, 'slug'), :value => hash(@post.slug) }
       %p
         %label{ :for => 'name' } name (optional)
         %input{ :type => 'text', :id => 'name', :class => 'name', :name => 'name' }
