Probabilistically render honeypot fields.

--- a/views/single_post.haml
+++ b/views/single_post.haml
@@ -17,9 +17,15 @@
       %input{ :type => 'hidden', :name => 'spinner', :value => @spinner }
       %input{ :type => 'hidden', :name => field_name(@spinner, 'timestamp'), :value => hash(@ts) }
       %input{ :type => 'hidden', :name => field_name(@spinner, 'slug'), :value => hash(@post.slug) }
+      - if @honeypots_chosen.include? 1
+        %input{ :type => 'text', :name => @honeypot_names[0], :class => @honeypot_css[0] }
       %p
         %label{ :for => @name_field } name (optional)
+        - if @honeypots_chosen.include? 2
+          %input{ :type => 'text', :name => @honeypot_names[1], :class => @honeypot_css[1] }
         %input{ :type => 'text', :id => @name_field, :class => @name_css, :name => @name_field }
+        - if @honeypots_chosen.include? 3
+          %input{ :type => 'text', :name => @honeypot_names[2], :class => @honeypot_css[2] }
       %p
         %textarea{ :id => @body_field, :class => @body_css, :name => @body_field }
       %p
