--- a/views/single_post.haml
+++ b/views/single_post.haml
@@ -29,5 +29,5 @@
       %p
         %textarea{ :id => @body_field, :class => @body_css, :name => @body_field }
       %p
-        %input{ :type => 'submit', :class => @submit_field, :name => @submit_field, :value => 'Submit' }
+        %input{ :type => 'submit', :class => @submit_css, :name => @submit_field, :value => 'Submit' }
     %div{ :id => 'comment-preview' }
