--- a/views/azure.scss
+++ b/views/azure.scss
@@ -11,6 +11,9 @@ $dark-color: #999;
 * {
   margin: 0;
   padding: 0;
+}
+
+body {
   font-family: Corbel, Verdana, Helvetica, sans-serif;
 }
 
@@ -106,11 +109,8 @@ ul.navigation {
     background: $azure-bg-color;
     p { margin: 0; }
   }
-  pre {
-    margin: 5px;
-    padding: 10px;
-    background: $dark-bg-color;
-    code { font-family: Monaco, "Andale Mono", Courier, monospace; }
+  code {
+    font-family: Inconsolata, monospace;
   }
 }
 
