--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -32,6 +32,9 @@
 // PLUGINS  ===================================================
 /* jQuery Magnific-Popup =================================== */
 @import "magnific-popup.less";
+// MISSING ====================================================
+/* Missing styles ========================================== */
+@import "missing.less";
 // MEDIA QUERIES ==============================================
 /* Print =================================================== */
 @media print {
@@ -58,6 +61,6 @@
 	@import "1382.less";
 }
 /* 2x for retina displays ================================== */
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) { 
-	@import "2x.less"; 
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+	@import "2x.less";
 }
