--- a/assets/less/missing.less
+++ b/assets/less/missing.less
@@ -174,7 +174,7 @@ footer[role=contentinfo] {
   background: #ddd;
 }
 
-@media screen and min-width450625em {
+@media screen and (min-width: 45.0625em) {
   #nav .block-title,#nav .close-btn,#top .nav-btn {
     border: 0;
     clip: rect(0000);
@@ -205,7 +205,7 @@ footer[role=contentinfo] {
   }
 }
 
-@media screen and max-width45em {
+@media screen and (max-width: 45em) {
   #nav {
     position: absolute;
     top: 0;
