Content and styles for the banner text.

--- a/assets/less/missing.less
+++ b/assets/less/missing.less
@@ -138,14 +138,14 @@ ol,ul {
 }
 
 #nav li.is-active a {
-  color: #c91b26;
+  color: #000;
 }
 
 #top {
   z-index: 100;
   position: relative;
   color: #fff;
-  background: #c91b26;
+  background: #000;
 }
 
 #top .block-title {
@@ -154,6 +154,14 @@ ol,ul {
   line-height: 1.2em;
   text-align: center;
   white-space: nowrap;
+  letter-spacing: 20px;
+}
+
+#top .block-title .callout {
+  margin: 0;
+  color: #06f;
+  font-size: 160%;
+  font-family: "Alex Brush", "Times New Roman", Times, serif;
 }
 
 #top .nav-btn {
@@ -261,7 +269,7 @@ footer[role=contentinfo] {
   .js-ready #nav {
     height: 100%;
     width: 70%;
-    background: #c91b26;
+    background: #000;
     -webkit-box-shadow: inset -1.5em 0 1.5em -.75em rgba(0,0,0,.25);
     -moz-box-shadow: inset -1.5em 0 1.5em -.75em rgba(0,0,0,.25);
     box-shadow: inset -1.5em 0 1.5em -.75em rgba(0,0,0,.25);
