Use variables for colors.

--- a/assets/less/missing.less
+++ b/assets/less/missing.less
@@ -125,7 +125,7 @@ ol,ul {
 
 #nav li a {
   display: block;
-  color: #ccc;
+  color: @fire;
   font-size: .875em;
   line-height: 1.28571em;
   font-weight: 700;
@@ -159,7 +159,7 @@ ol,ul {
 
 #top .block-title .callout {
   margin: 0;
-  color: #06f;
+  color: @azure;
   font-size: 160%;
   font-family: "Alex Brush", "Times New Roman", Times, serif;
 }
