--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -12,12 +12,15 @@
 @textcolor      : #333332;
 @text-color     : @textcolor;
 @border-color: @text-color;
-@basecolor 		: #343434;	  
-@compcolor 		: spin(@basecolor, 180); 
+@basecolor 		: #343434;
+@compcolor 		: spin(@basecolor, 180);
 @bordercolor    : @basecolor;
 @white          : #fff;
 @black          : #111;
 @accentcolor    : @black;
+
+@azure : #06f;
+@fire : #f50;
 /* Links ================================================= */
 @linkcolor 		    : #343434;
 @link-color: @linkcolor;
