Fuss with the tag page markup and styles.

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -29,6 +29,7 @@
 // LAYOUT =====================================================
 /* Page level layout styles ================================ */
 @import "page.less";
+@import "tags.less";
 // PLUGINS  ===================================================
 /* jQuery Magnific-Popup =================================== */
 @import "magnific-popup.less";
