--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -19,8 +19,11 @@
 @black          : #111;
 @accentcolor    : @black;
 
-@azure : #06f;
-@fire : #f50;
+@azure: #06f;
+@fire: #f50;
+@tag: lighten(desaturate(@azure, 50%), 30%);
+@tagborder: lighten(@tag, 30%);
+
 /* Links ================================================= */
 @linkcolor 		    : #343434;
 @link-color: @linkcolor;
