--- a/_includes/_scripts.html
+++ b/_includes/_scripts.html
@@ -1,7 +1,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{ asset.url }}/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-<script src="{{ asset.url }}/assets/js/scripts.min.js"></script>
-<script src="{{ asset.url }}/assets/js/main.js"></script>
+<script>window.jQuery || document.write('<script src="{{ site.asset.url }}/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+<script src="{{ site.asset.url }}/assets/js/scripts.min.js"></script>
+<script src="{{ site.asset.url }}/assets/js/main.js"></script>
 {% if site.google_analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
