Revert "Infer the URL instead."
This reverts commit 927a7b8bae9340903bb166ce92a4add8dafbc70b.

--- a/_includes/_disqus_meta.html
+++ b/_includes/_disqus_meta.html
@@ -2,4 +2,5 @@
   var disqus_shortname = 'azurefire';
   var disqus_identifier = '{{ page.id }}';
   var disqus_title = '{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}';
+  var disqus_url = '{{ canonical }}';
 </script>
