--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -19,7 +19,7 @@
                   </li>
                 {% endfor %}
                 <li>
-                  <a href="{{ site.url }}/feed.xml" title="Atom/RSS feed">Feed</a>
+                  <a href="{{ site.url }}/feed.xml" title="RSS feed">feed</a>
                 </li>
             </ul>
             <a class="close-btn" id="nav-close-btn" href="#top">Return to Content</a>
