--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,9 @@
   <h3><a href="{{ site.url }}/archive/">Recent News</a></h3>
   {% for post in site.posts limit:5 %}
   <article itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
-    <h2 itemprop="headline"><a href="{{ site.url }}{{ post.url }}" rel="bookmark" title="{{ post.title }}">{{ post.title }}</a></h2>
+    <h2 itemprop="headline">
+      <a href="{{ site.url }}{{ post.url }}#disqus_thread" rel="bookmark" title="{{ post.title }}" class="disqus_count">{{ post.title }}</a>
+    </h2>
     <p itemprop="text">{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 120 }}{% endif %}</p>
   </article>
   {% endfor %}
