--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -35,7 +35,9 @@
       {% endif %}
     {% endunless %}
     <article itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
-      <h2 itemprop="headline"><a href="{{ site.url }}{{ post.url }}" rel="bookmark" title="{{ post.title }}">{{ post.title }}</a></h2>
+      <h2 itemprop="headline">
+        <a href="{{ site.url }}{{ post.url }}#disqus_thread" rel="bookmark" class="disqus_count" title="{{ post.title }}">{{ post.title }}</a>
+      </h2>
       <p itemprop="text">{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 120 }}{% endif %}</p>
     </article>
   {% endfor %}
