--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,8 @@
   {% for post in site.posts limit:5 %}
   <article itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
     <h2 itemprop="headline">
-      <a href="{{ site.url }}{{ post.url }}#disqus_thread" rel="bookmark" title="{{ post.title }}" class="disqus_count">{{ post.title }}</a>
+      <a href="{{ site.url }}{{ post.url }}" rel="bookmark" title="{{ post.title }}">{{ post.title }}</a>
+      <a href="{{ site.url }}{{ post.url }}#disqus_thread" title="{{ post.title }} comments" class="disqus_count">comment</a>
     </h2>
     <p itemprop="text">{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 120 }}{% endif %}</p>
   </article>
