Repeat for post-index.

--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -36,7 +36,8 @@
     {% endunless %}
     <article itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
       <h2 itemprop="headline">
-        <a href="{{ site.url }}{{ post.url }}#disqus_thread" rel="bookmark" class="disqus_count" title="{{ post.title }}">{{ post.title }}</a>
+        <a href="{{ site.url }}{{ post.url }}" rel="bookmark" title="{{ post.title }}">{{ post.title }}</a>
+        <a href="{{ site.url }}{{ post.url }}#disqus_thread" title="{{ post.title }} comments" class="disqus_count">comments</a>
       </h2>
       <p itemprop="text">{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 120 }}{% endif %}</p>
     </article>
