--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,10 +13,7 @@
 
 {% include _navigation.html %}
 
-{% if page.image.feature %}<div class="image-wrap">
-  <img src="{{ site.asset.url }}/images/{{ page.image.feature }}" alt="{{ page.title }} feature image" itemprop="primaryImageOfPage">
-  {% if page.image.credit %}<span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>{% endif %}
-</div><!-- /.image-wrap -->{% endif %}
+{% include _feature.html %}
 
 <div class="article-author-side">
   {% include _author-bio.html %}
