Use {% javascript %} for great javascripts

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -45,8 +45,7 @@
 <meta http-equiv="cleartype" content="on">
 
 <!-- Load Modernizr -->
-
-<script src="{{ site.asset.url }}/assets/js/modernizr.js"></script>
+{% javascript modernizr %}
 
 <!-- Icons -->
 <!-- 16x16 -->
