Move Less sheets into _assets.
Use the .less.erb trick to reference assets from less styles.

--- a/_assets/stylesheets/app.less.erb
+++ b/_assets/stylesheets/app.less.erb
@@ -3,6 +3,12 @@
 // By: Michael Rose
 // ===========================================================/
 
+// Asset references ===========================================
+@close-btn-svg: "<%= asset_path 'close-btn.svg' %>";
+@close-btn-png: "<%= asset_path 'close-btn.png' %>";
+@nav-icon-svg: "<%= asset_path 'nav-icon.svg' %>";
+@nav-icon-png: "<%= asset_path 'nav-icon.png' %>";
+
 // ROOT =======================================================
 /* CSS Normalize =========================================== */
 @import "normalize.less";
