--- a/_assets/stylesheets/missing.less
+++ b/_assets/stylesheets/missing.less
@@ -19,7 +19,7 @@ ol,ul {
   padding: 0;
   border: 0;
   outline: 0;
-  background: url(/assets/img/close-btn.svg) left center no-repeat;
+  background: url(@close-btn-svg) left center no-repeat;
   background-size: 1.875em 1.875em;
   overflow: hidden;
   white-space: nowrap;
@@ -30,7 +30,7 @@ ol,ul {
 }
 
 .no-svg .close-btn {
-  background-image: url(/assets/img/close-btn.png);
+  background-image: url(@close-btn-png);
 }
 
 .close-btn:focus,.close-btn:hover {
@@ -45,7 +45,7 @@ ol,ul {
   padding: 0;
   border: 0;
   outline: 0;
-  background: url(/assets/img/nav-icon.svg) left center no-repeat;
+  background: url(@nav-icon-svg) left center no-repeat;
   background-size: 1.875em 1.5em;
   overflow: hidden;
   white-space: nowrap;
@@ -56,7 +56,7 @@ ol,ul {
 }
 
 .no-svg .nav-btn {
-  background-image: url(/assets/img/nav-icon.png);
+  background-image: url(@nav-icon-png);
 }
 
 .nav-btn:focus,.nav-btn:hover {
