--- a/_assets/stylesheets/ie.less.erb
+++ b/_assets/stylesheets/ie.less.erb
@@ -8,6 +8,11 @@
 @close-btn-png: "<%= asset_path 'close-btn.png' %>";
 @nav-icon-svg: "<%= asset_path 'nav-icon.svg' %>";
 @nav-icon-png: "<%= asset_path 'nav-icon.png' %>";
+@icomoon-eot: "<%= asset_path 'icomoon.eot' %>";
+@icomoon-eot-iefix: "<%= asset_path 'icomoon.eot' %>?#iefix";
+@icomoon-woff: "<%= asset_path 'icomoon.woff' %>";
+@icomoon-ttf: "<%= asset_path 'icomoon.ttf' %>";
+@icomoon-svg: "<%= asset_path 'icomoon.svg' %>#icomoon";
 
 // ROOT =======================================================
 /* CSS Normalize =========================================== */
